Added working text box and made sure it could go through tabs

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Excel Analyzer AI</h1>
+    <h1>Docket AI</h1>
 
     <div class="row">
       <!-- Left: controls -->
